# quant-lab

./: config.yml  docker-compose.yml  pyproject.toml
services/optimization/: Dockerfile  __init__.py  config.yaml  infra.py  main.py  pyproject.toml  registration.py  settings.py
services/optimization/api/: endpoints.py  registration.py
services/optimization/application/: __init__.py  optimization_service.py  registration.py
services/optimization/application/handlers/: backtest_handler.py  backtest_sliced_handler.py
services/optimization/application/integration_events/: backtest_completed.py  backtest_sliced.py  optimization_done.py
services/optimization/application/services/: optimization_service.py
services/optimization/infrastructure/: __init__.py  registration.py
shared/: config.py  pyproject.toml
shared/messaging/: config.py  messaging_settings.py  protocols.py
shared/messaging/kafka/: config.py  kafka_message_broker.py  kafka_message_client.py
shared/shared/: startup.py
shared/shared/di/: container.py  protocols.py
shared/shared/logging/: registration.py  settings.py
shared/shared/messaging/: __init__.py  protocols.py  registration.py
shared/shared/messaging/kafka/: __init__.py  registration.py
shared/shared/middleware/: scope_middleware.py
shared/src/shared/: __init__.py  configuration_registry.py  startup.py
shared/src/shared/config/: __init__.py  loader.py
shared/src/shared/di/: __init__.py  adapter.py  container.py  fastapi_injector.py  injection.py  protocols.py  scope.py
shared/src/shared/logging/: __init__.py  adapter.py  (+4 more)
(+36 files in other folders)
