[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "dependency-injector>=4.48.2",
    "fastapi>=0.121.1",
    "mypy>=1.18.2",
    "pydantic>=2.12.4",
    "pyaml>=25.7.0",
    "starlette>=0.49.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
